input output processing doen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Banana App</title>
 </head>
 <body>
-        <h1>How to do it ???</h1>
+    <h1 class="txt">what is this</h1>
+    <textarea  id="text-input" placeholder="Enter some text:" cols="30" rows="10"></textarea><br>
+    <button id="click-translate">Translate It</button>
+        <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
