--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana App</title>
+    <style>
+        #output{
+            border: 1px solid black;
+            width: 80%;
+            height: 10vh;
+        }
+    </style>
 </head>
 <body>
     <h1 class="txt">what is this</h1>
     <textarea  id="text-input" placeholder="Enter some text:" cols="30" rows="10"></textarea><br>
     <button id="click-translate">Translate It</button>
+    <h2>Output part</h2>
+    <div id="output"></div>
         <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
