--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana App</title>
-    <style>
-        #output{
-            border: 1px solid black;
-            width: 80%;
-            height: 10vh;
-        }
-    </style>
+    <title>Minions App</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <h1 class="txt">what is this</h1>
-    <textarea  id="text-input" placeholder="Enter some text:" cols="30" rows="10"></textarea><br>
-    <button id="click-translate">Translate It</button>
-    <h2>Output part</h2>
-    <div id="output"></div>
-        <script src="app.js" type="text/javascript"></script>
+    <nav>
+        <div style="padding: 1rem; font-size: 1.5rem;margin: auto;">Minions Translator</div>
+    </nav>
+    <main>
+        <textarea  id="text-input" placeholder="Enter some text:"
+         cols="30" rows="10"></textarea><br>
+         <button id="click-translate">Translate It</button>
+         <div style="margin-top: 1rem;">Translation will come here 👇</div>
+         <div id="output"></div>
+    </main>
+    <footer>
+        <div style="font-size: large;padding: 0.5rem;font-weight: bold;text-align: center;">About It</div>
+        <p style="padding: 0.4rem;">Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator
+            to convert your text from English to Minion speak or Banana language.</p>
+    </footer>
+         <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
